[CDP1802] Support CDP1804/CDP1804A variants
Rename CDP1806 to CDP1804A, and add CDP1804.

--- a/src/Makefile.arch
+++ b/src/Makefile.arch
@@ -47,7 +47,7 @@ TGT_z8      = z8 z86c z88
 TGT_tlcs90  = tlcs90
 TGT_ins8060 = ins8060
 TGT_ins8070 = ins8070
-TGT_cdp1802 = cdp1802 cdp1806
+TGT_cdp1802 = cdp1802 cdp1804 cdp1804a
 TGT_i8086   = i8086
 TGT_tms9900 = tms9900 tms9995 tms99105
 TGT_mc68000 = mc68000
@@ -79,7 +79,8 @@ CPU_tlcs90   = TLCS90
 CPU_ins8060  = SC/MP
 CPU_ins8070  = 8070
 CPU_cdp1802  = 1802
-CPU_cdp1806  = 1806
+CPU_cdp1804  = 1804
+CPU_cdp1804a = 1804A
 CPU_i8086    = 8086
 CPU_tms9900  = TMS9900
 CPU_tms9995  = TMS9995
