--- a/src/Makefile.arch
+++ b/src/Makefile.arch
@@ -52,7 +52,7 @@ TGT_i8086   = i8086
 TGT_tms9900 = tms9900 tms9995 tms99105
 TGT_mc68000 = mc68000
 TGT_z8000   = z8001 z8002 z8k1 z8k2
-TGT_ns32000 = ns32k
+TGT_ns32000 = ns32000 ns32k
 
 # CPU for each target
 CPU_mc6809   = 6809
@@ -90,7 +90,8 @@ CPU_z8001    = Z8001
 CPU_z8002    = Z8002
 CPU_z8k1     = Z8001
 CPU_z8k2     = Z8002
-CPU_ns32k    = 32032
+CPU_ns32000  = ns32032
+CPU_ns32k    = ns32032
 
 # targets with Motorola S19 format
 S19_OUTS = $(TGT_mc6809) $(TGT_mc6800) mos6502 g65sc02 r65c02 w65c02s m6811
