--- a/cli/Makefile
+++ b/cli/Makefile
@@ -34,7 +34,7 @@ CXXFLAGS = -Wall -O -std=c++14 -I../src
 CPPFLAGS = -MMD
 
 OBJS_com = cli_listing.o cli_memory.o error_reporter.o file_util.o \
-	   bin_formatter.o intel_hex.o moto_srec.o \
+	   bin_formatter.o intel_hex.o moto_srec.o str_buffer.o \
 	   $(foreach a,$(ARCHS),$(OBJS_$(a)))
 OBJS_asm = asm.o asm_base.o asm_driver.o asm_directive.o value_parser.o \
 	   $(foreach a,$(ARCHS),asm_$(a).o)
