--- a/test/Makefile
+++ b/test/Makefile
@@ -37,11 +37,11 @@ CPPFLAGS = -MMD
 
 OBJS_test = test_asserter.o error_reporter.o
 OBJS_gen  = dis_base.o value_formatter.o test_memory.o text_buffer.o \
-	    cli_listing.o error_reporter.o
-OBJS_asm  = asm_base.o test_asm_helper.o value_parser.o
-OBJS_dis  = dis_base.o test_dis_helper.o value_formatter.o test_memory.o
+	    cli_listing.o error_reporter.o str_buffer.o
+OBJS_asm  = asm_base.o test_asm_helper.o value_parser.o str_buffer.o
+OBJS_dis  = dis_base.o test_dis_helper.o value_formatter.o str_buffer.o test_memory.o
 OBJS_expr = test_expr_helper.o test_asserter.o error_reporter.o \
-            value_parser.o value_formatter.o
+            value_parser.o value_formatter.o str_buffer.o
 $(eval $(foreach a,$(ARCHS),$(call objs-arch,$(a))))
 
 TEST_OBJS = $(ARCHS:%=test_asm_%.o) $(ARCHS:%=test_dis_%.o)
