[TMS32010] Add TMS32010 Disassembler

--- a/src/Makefile.arch
+++ b/src/Makefile.arch
@@ -27,6 +27,7 @@ ARCHS = \
 	cdp1802 \
 	i8086   \
 	tms9900 \
+	tms32010\
 	mc68000 \
 	z8000   \
 	ns32000
@@ -50,6 +51,7 @@ TGT_ins8070 = ins8070
 TGT_cdp1802 = cdp1802 cdp1804 cdp1804a
 TGT_i8086   = i8086
 TGT_tms9900 = tms9900 tms9995 tms99105
+TGT_tms32010= tms32010
 TGT_mc68000 = mc68000
 TGT_z8000   = z8001 z8002 z8k1 z8k2
 TGT_ns32000 = ns32000 ns32k
@@ -86,6 +88,7 @@ CPU_i8086    = 8086
 CPU_tms9900  = TMS9900
 CPU_tms9995  = TMS9995
 CPU_tms99105 = TMS99105
+CPU_tms32010 = 32010
 CPU_mc68000  = 68000
 CPU_z8001    = Z8001
 CPU_z8002    = Z8002
