--- a/library.properties
+++ b/library.properties
@@ -8,3 +8,4 @@ category=Other
 url=https://github.com/tgtakaoka/libasm
 architectures=*
 dot_a_linkage=true
+includes=asm_mc6809.h,dis_mc6809.h,asm_mc6800.h,dis_mc6800.h,asm_mos6502.h,dis_mos6502.h,asm_i8051.h,dis_i8051.h,asm_i8080.h,dis_i8080.h,asm_z80.h,dis_z80.h,asm_z8.h,dis_z8.h,asm_tlcs90.h,dis_tlcs90.h,asm_ins8060.h,dis_ins8060.h,asm_ins8070.h,dis_ins8070.h,asm_cdp1802.h,dis_cdp1802.h,asm_tms32010.h,dis_tms32010.h,asm_i8086.h,dis_i8086.h,asm_mc68000.h,dis_mc68000.h,asm_z8000.h,dis_z8000.h,asm_ns32000.h,dis_ns32000.h
