--- a/examples/asm_z8000/platformio.ini
+++ b/examples/asm_z8000/platformio.ini
@@ -1,1 +1,31 @@
-../platformio.common
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+
+[platformio]
+src_dir = .
+default_envs = promicro16, nano_every, nano_33_iot
+
+[env]
+lib_deps = tgtakaoka/libcli@1.0.4
+
+[env:promicro16]
+platform = atmelavr
+board = sparkfun_promicro16
+framework = arduino
+
+[env:nano_every]
+platform = atmelmegaavr
+board = nano_every
+framework = arduino
+
+[env:nano_33_iot]
+platform = atmelsam
+board = nano_33_iot
+framework = arduino
