--- a/src/Makefile.arch
+++ b/src/Makefile.arch
@@ -17,6 +17,7 @@ ARCHS = \
 	mc6809  \
 	mc6800  \
 	mos6502 \
+	i8048   \
 	i8051   \
 	i8080   \
 	z80     \
@@ -41,6 +42,7 @@ endef
 TGT_mc6809  = mc6809 hd6309
 TGT_mc6800  = mc6800 mc6801 mc68hc05 mc68hc11 hd6301
 TGT_mos6502 = mos6502 g65sc02 r65c02 w65c02s w65c816
+TGT_i8048   = i8039 i8048 i80c39 i80c48 msm80c39 msm80c48
 TGT_i8051   = i8051
 TGT_i8080   = i8080 i8085
 TGT_z80     = z80 i8080_z80syn i8085_z80syn
@@ -69,6 +71,12 @@ CPU_g65sc02  = 65SC02
 CPU_r65c02   = 65C02
 CPU_w65c02s  = W65C02S
 CPU_w65c816  = 65816
+CPU_i8039    = 8039
+CPU_i8048    = 8048
+CPU_i80c39   = 80c39
+CPU_i80c48   = 80c48
+CPU_msm80c39 = msm80c39
+CPU_msm80c48 = msm80c48
 CPU_i8051    = 8051
 CPU_i8080    = 8080
 CPU_i8085    = 8085
