--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=1.6.13
 author=Tadashi G. Takaoka
 maintainer=Tadashi G. Takaoka <tadashi.g.takaoka@gmail.com>
 sentence=Cross assembler and disassembler for retro CPUs
-paragraph=With this, you can integrate assembler or disassembler into your sketch. Supported CPUs are MC6800, MC6805, MC6809, MC68HC11, MOS6502, i8051, i8080, Z80, Z8, TLCS90, INS8060, INS8070, CDP1802, TMS32010, TMS9900, i8086, MC68000, Z8000, NS32032
+paragraph=With this, you can integrate assembler or disassembler into your sketch. Supported CPUs are MC6800, MC6805, MC6809, MC68HC11, MOS6502, i8048, i8051, i8080, Z80, Z8, TLCS90, INS8060, INS8070, CDP1802, TMS32010, TMS9900, i8086, MC68000, Z8000, NS32032
 category=Other
 url=https://github.com/tgtakaoka/libasm
 architectures=*
