--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -1,6 +1,18 @@
 name: C/C++ CI
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
+    tags-ignore:
+      - '*.*.*'
+    paths-ignore:
+      - ".github/**"
+      - "**/*.adoc"
+      - "**/*.md"
+      - "**/*.txt"
+      - "library.*"
+  pull_request:
 
 jobs:
   build:
