--- a/.github/workflows/platformio-ci.yml
+++ b/.github/workflows/platformio-ci.yml
@@ -1,6 +1,18 @@
 name: PlatformIO CI
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
+    tags-ignore:
+      - '*.*.*'
+    paths-ignore:
+      - ".github/**"
+      - "**/*.adoc"
+      - "**/*.md"
+      - "**/*.txt"
+      - "library.*"
+  pull_request:
 
 jobs:
   build:
@@ -44,7 +56,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install --upgrade platformio
       - name: Install library dependency
-        run: pio lib -g install libcli@1.2.1
+        run: pio lib -g install libcli@1.2.2
       - name: Run PlatformIO
         run: pio ci --lib="." --board=sparkfun_promicro16 --board=nano_every --board=nano_33_iot
         env:
