--- a/src/Makefile.arch
+++ b/src/Makefile.arch
@@ -32,7 +32,9 @@ ARCHS = \
 	tms32010\
 	mc68000 \
 	z8000   \
-	ns32000
+	ns32000 \
+	mn1610
+
 # define OBJS_arch variable which contains architecture related objects.
 define objs-arch # arch
 OBJS_$(1) = table_$(1).o reg_$(1).o
@@ -59,6 +61,7 @@ TGT_tms32010= tms32010
 TGT_mc68000 = mc68000
 TGT_z8000   = z8001 z8002 z8k1 z8k2
 TGT_ns32000 = ns32000 ns32k
+TGT_mn1610  = mn1610 mn1613
 
 # CPU for each target
 CPU_mc6809   = 6809
@@ -106,13 +109,15 @@ CPU_z8k1     = Z8001
 CPU_z8k2     = Z8002
 CPU_ns32000  = ns32032
 CPU_ns32k    = ns32032
+CPU_mn1610   = mn1610
+CPU_mn1613   = mn1613
 
 # targets with Motorola S19 format
 S19_OUTS = $(TGT_mc6809) $(TGT_mc6800) $(TGT_mc6805) mos6502 g65sc02 r65c02 w65c02s m6811
 # targets with Motorola S28 format
 S28_OUTS = $(TGT_mc68000) m68k w65c816 w65c816_m0x0 w65c816_m0x1 w65c816_m1x0 w65c816_m1x1
 # targets with Intel32 (32bit address) format
-I32_OUTS = z8001 z8k1 ns32032 ns32k
+I32_OUTS = z8001 z8k1 ns32032 ns32k mn1613
 # other targets use Intel8 format
 define __out-ext # target
 $(if $(filter $(1),$(S19_OUTS)),s19,$(if $(filter $(1),$(S28_OUTS)),s28,hex))
