--- a/.github/workflows/platformio-ci.yml
+++ b/.github/workflows/platformio-ci.yml
@@ -59,6 +59,6 @@ jobs:
       - name: Install library dependency
         run: pio lib -g install libcli@1.2.3
       - name: Run PlatformIO
-        run: pio ci --lib="." --board=sparkfun_promicro16 --board=nano_every --board=nano_33_iot
+        run: pio ci --lib="." --board=sparkfun_promicro16 --board=nano_every --board=nano_33_iot --board=pico
         env:
           PLATFORMIO_CI_SRC: ./examples/${{ matrix.prog }}_${{ matrix.arch }}/${{ matrix.prog }}_${{ matrix.arch }}.ino
