--- a/examples/asm_i8086/platformio.ini
+++ b/examples/asm_i8086/platformio.ini
@@ -10,7 +10,7 @@
 
 [platformio]
 src_dir = .
-default_envs = promicro16, nano_every, nano_33_iot
+default_envs = promicro16, nano_every, nano_33_iot, pico
 
 [env]
 lib_deps =
@@ -31,3 +31,9 @@ framework = arduino
 platform = atmelsam
 board = nano_33_iot
 framework = arduino
+
+[env:pico]
+platform = raspberrypi
+board = pico
+framework = arduino
+upload_protocol = picotool
