[ASM] Add National Semiconductor value parser and formatter
National Semiconductor, IBM, and Panasonic used to use the different
notations to express number literals.

 - [decimal] <n>, D'<n>'
 - [binary] 0B<n>, B'<n>'
 - [octal] 0<n>, O'<n>', Q'<n>'
 - [hexadecimal] 0X<n>, H'<n>', X'<n>'

the base specifier letter can be lower case. For National
Semiconductor, the trailing single-quote is optional.

--- a/test/Makefile
+++ b/test/Makefile
@@ -70,7 +70,7 @@ endef
 $(eval $(foreach a,$(ARCHS),$(call test-rule,$(a))))
 
 # make rule for testing expression.
-EXPRS = base motorola intel
+EXPRS = base motorola intel national
 define test-expr # expr
 test_expr_$(1): test_expr_$(1).o $$(OBJS_expr) $$(OBJS_test)
 	$$(CXX) -o $$@ $$(CXXFLAGS) $$^
@@ -84,6 +84,8 @@ test_expr:: test_expr_$(1)
 
 endef
 $(eval $(foreach e,$(EXPRS),$(call exec-test,$(e))))
+
+test: $(foreach a,$(ARCHS),test_$(a)) test_expr
 
 define gen-rule
 gen_$(1): $(if $(wildcard gen_$(1).cpp),gen_$(1).o) dis_$(1).o $$(OBJS_$(1)) $$(OBJS_gen)
