[i8086] Add V30 variant support

--- a/src/Makefile.arch
+++ b/src/Makefile.arch
@@ -57,7 +57,7 @@ TGT_tlcs90  = tlcs90
 TGT_ins8060 = ins8060
 TGT_ins8070 = ins8070
 TGT_cdp1802 = cdp1802 cdp1804 cdp1804a
-TGT_i8086   = i8086 i80186
+TGT_i8086   = i8086 i80186 v30
 TGT_tms9900 = tms9900 tms9995 tms99105
 TGT_tms32010= tms32010
 TGT_mc68000 = mc68000
@@ -102,6 +102,7 @@ CPU_cdp1804  = 1804
 CPU_cdp1804a = 1804A
 CPU_i8086    = 8086
 CPU_i80186   = 80186
+CPU_v30      = V30
 CPU_tms9900  = TMS9900
 CPU_tms9995  = TMS9995
 CPU_tms99105 = TMS99105
